<?xml version="1.0"?>
<package format="2">
  <name>robonomics_tutorials</name>
  <version>0.2.0</version>
  <description>The Robonomics tutorials stack</description>
  <maintainer email="mail@akru.me">Alexander Krupenkin</maintainer>
  <license>BSD3</license>
  <url type="repository">https://github.com/airalab/robonomics_tutorials</url>
  <author email="vadim.manaenko@aira.life">Vadim Manaenko</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage/>
  </export>

</package>
